contact info and add supporters section

--- a/_includes/icons-2.html
+++ b/_includes/icons-2.html
@@ -1,6 +1,6 @@
 {% if site.theme_settings.patreon %}
 <li>
-	<a href="https://www.patreon.com/bePatron?u={{ site.theme_settings.patreon }}" class="round-button patreon" role="button" target="_blank" title="Become a patron">
+	<a href="https://www.patreon.com/{{ site.theme_settings.patreon }}" class="round-button patreon" role="button" target="_blank" title="Become a patron">
         <i class="fab fa-patreon"></i> Become a patron
 	</a>
 </li>
