--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -253,7 +253,7 @@
 
 {% if site.theme_settings.youtube %}
 <li>
-	<a href="https://www.youtube.com/user/{{ site.theme_settings.youtube }}" title="{{ site.theme_settings.str_follow_on }} YouTube">
+	<a href="https://www.youtube.com/c/{{ site.theme_settings.youtube }}" title="{{ site.theme_settings.str_follow_on }} YouTube">
 		<span class="fa-stack fa-lg">
             <i class="fas fa-circle fa-stack-2x"></i>
             <i class="fab fa-youtube fa-stack-1x fa-inverse"></i>
