add discord badge

--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -77,7 +77,7 @@
 
 {% if site.theme_settings.discord %}
 <li>
-	<a href="https://discord.gg/{{ site.theme_settings.discord }}" title="{{ site.theme_settings.str_discord }}">
+	<a href="https://discord.com/users/{{ site.theme_settings.discord }}" title="{{ site.theme_settings.str_discord }}">
 		<span class="fa-stack fa-lg">
             <i class="fas fa-circle fa-stack-2x"></i>
             <i class="fab fa-discord fa-stack-1x fa-inverse"></i>
