--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,8 +14,7 @@
 
     <!--Favicon and metadata-->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="1024x1024" href="/assets/icons/favicon.png">
     <link rel="manifest" href="/assets/icons/site.webmanifest">
     <link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg" color="#002a50">
     <link rel="shortcut icon" href="/assets/icons/favicon.ico">
