Add twemoji stylesheet

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,10 @@
     <meta name="msapplication-navbutton-color" content="#002A50">
     <meta name="apple-mobile-web-app-status-bar-style" content="#002A50">
     
+    <!-- Twemoji -->
+    <!-- src https://github.com/SebastianAigner/twemoji-amazing -->
+    <link rel="stylesheet" href="{{ "/assets/css/twemoji-amazing.css" | relative_url }}">
+    
     <!-- Main JS (navbar.js, katex_init.js and masonry_init.js)-->
     <script defer=true src="{{ "/assets/js/main.min.js" | relative_url }}"></script>
     
