--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,6 @@
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=0.5, maximum-scale=5">
     <meta name="theme-color" content="#002A50">
     <meta name="msapplication-navbutton-color" content="#002A50">
     <meta name="apple-mobile-web-app-status-bar-style" content="#002A50">
