--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -25,6 +25,7 @@ $important-color-light: #A50038;
 $important-color-dark: #CC2960;
 $patreon-color: #f96854;
 $paypal-color: #0079C1;
+$coffee-color: #FFDD00;
 
 // Typography colours
 $text-color-light: #383838;
@@ -35,6 +36,7 @@ $blockquote-color-light: #EEF7FA; // $background-color;
 $blockquote-color-dark: #1B3E4A;
 $patreon-link-color: $patreon-color;
 $paypal-link-color: $paypal-color;
+$coffee-link-color: $coffee-color;
 
 //Search color
 $link-shadow: transparentize($link-color, .6); //rgba(26, 188, 156, 0.6);
