Add galciv emoji

--- a/assets/css/twemoji-amazing.css
+++ b/assets/css/twemoji-amazing.css
@@ -71,6 +71,10 @@ licensed under MIT: https://ellekasai.mit-license.org/
     background-image: url("https://storage.googleapis.com/assets-illusion0001/images/emoji/thinkhappy.svg")
 }
 
+.galciv {
+    background-image: url("https://storage.googleapis.com/assets-illusion0001/images/emoji/galciv.svg")
+}
+
 .twa-1st-place-medal {
     background-image: url("https://twemoji.maxcdn.com/v/latest/svg/1f947.svg")
 }
