Comment out favicon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
     <link rel="icon" type="image/png" sizes="1024x1024" href="/assets/icons/favicon.png">
     <link rel="manifest" href="/assets/icons/site.webmanifest">
     <link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg" color="#002a50">
-    <link rel="shortcut icon" href="/assets/icons/favicon.ico">
+    <!-- <link rel="shortcut icon" href="/assets/icons/favicon.ico"> -->
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="msapplication-config" content="/assets/icons/browserconfig.xml">
 
