Migrate media assets to cloudflare

--- a/assets/css/twemoji-amazing.css
+++ b/assets/css/twemoji-amazing.css
@@ -73,11 +73,11 @@ licensed under MIT: https://ellekasai.mit-license.org/
 /* End preamble; begin emoji classes */
 
 .thinkhappy {
-    background-image: url("https://storage.googleapis.com/assets-illusion0001/images/emoji/thinkhappy.svg")
+    background-image: url("https://img-assets.illusion0001.workers.dev/assets/images/emoji/thinkhappy.svg")
 }
 
 .galciv {
-    background-image: url("https://storage.googleapis.com/assets-illusion0001/images/emoji/galciv.svg")
+    background-image: url("https://img-assets.illusion0001.workers.dev/assets/images/emoji/galciv.svg")
 }
 
 .twa-1st-place-medal {
