--- a/assets/css/twemoji-amazing.css
+++ b/assets/css/twemoji-amazing.css
@@ -80,6 +80,15 @@ licensed under MIT: https://ellekasai.mit-license.org/
     background-image: url("https://img-assets.illusion0001.workers.dev/assets/images/emoji/galciv.svg")
 }
 
+
+.kat-angry {
+    background-image: url("https://img-assets.illusion0001.workers.dev/assets/images/emoji/kat-angry.svg")
+}
+
+.kat-smug {
+    background-image: url("https://img-assets.illusion0001.workers.dev/assets/images/emoji/smug_kat.svg")
+}
+
 .twa-1st-place-medal {
     background-image: url("https://twemoji.maxcdn.com/v/latest/svg/1f947.svg")
 }
