add `MayruAnimationKit02Dance` emote

--- a/assets/css/twemoji-amazing.css
+++ b/assets/css/twemoji-amazing.css
@@ -72,6 +72,10 @@ licensed under MIT: https://ellekasai.mit-license.org/
 
 /* End preamble; begin emoji classes */
 
+.MayruAnimationKit02Dance {
+    background-image: url("https://img-assets.illusion0001.workers.dev/assets/images/emoji/MayruAnimationKit02Dance.gif")
+}
+
 .thinkhappy {
     background-image: url("https://img-assets.illusion0001.workers.dev/assets/images/emoji/thinkhappy.svg")
 }
