Migrate to Google Drive for media

--- a/assets/css/twemoji-amazing.css
+++ b/assets/css/twemoji-amazing.css
@@ -73,24 +73,24 @@ licensed under MIT: https://ellekasai.mit-license.org/
 /* End preamble; begin emoji classes */
 
 .MayruAnimationKit02Dance {
-    background-image: url("https://img-assets.illusion0001.workers.dev/assets/images/emoji/MayruAnimationKit02Dance.gif")
+    background-image: url("https://drive.google.com/uc?id=1LbahIXprmROlAueQEG3jLLzbRnf9uwJs")
 }
 
 .thinkhappy {
-    background-image: url("https://img-assets.illusion0001.workers.dev/assets/images/emoji/thinkhappy.svg")
+    background-image: url("https://drive.google.com/uc?id=1X5zHY2WpfaAYNBmxFthyt_a0vNKQxn-I")
 }
 
 .galciv {
-    background-image: url("https://img-assets.illusion0001.workers.dev/assets/images/emoji/galciv.svg")
+    background-image: url("https://drive.google.com/uc?id=1BWiKuAGgK-BhmIAP2lqPcvkei0zFDYHj")
 }
 
 
 .kat-angry {
-    background-image: url("https://img-assets.illusion0001.workers.dev/assets/images/emoji/kat-angry.svg")
+    background-image: url("https://drive.google.com/uc?id=1OPnJ9QNAsK6gdw6k_d2e-h2MGgwZx6pL")
 }
 
 .kat-smug {
-    background-image: url("https://img-assets.illusion0001.workers.dev/assets/images/emoji/smug_kat.svg")
+    background-image: url("https://drive.google.com/uc?id=1hJmCzoBQy96li_CkLfEeuPHYKsXjWQgo")
 }
 
 .twa-1st-place-medal {
