--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,7 @@
   <body>
     <main class="blogfeed">
       {% include header.html %}
+      {% include social-links.html %}
       <section id="article">
         {% if page.header.teaser %}
         <!--  -->
