--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -94,6 +94,24 @@ header .site-title {
   background-color: var(--dm-contrast);
 }
 
+#social-links1 {
+  margin: 2rem 0 3rem 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 1rem;
+}
+
+#social-links1 a {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.75rem;
+  border-radius: var(--border-radius);
+  color: var(--bg-dm-secondary);
+  background-color: var(--dm-contrast);
+}
+
 #social-links a img {
   width: 20px;
   border-radius: 50%;
